# mass_spring_cuda_test

./: README.md  test.sh
input_data/: sphere.vtk
input_data/cloth/: cloth.csv  cloth.vtk  cloth_coarse.vtk  cloth_empty.csv  cloth_fine.vtk
input_data/rod/: rod.csv  rod.vtk
scripts/: makefile  object_creator.sh  simulator.sh
src/: CMakeLists.txt  camera_test.cpp  camera_test.h  cuda_jacobi_solver.cu  edge.cpp  edge.h  head.h  io.cpp  jacobi_solver.cpp  mass_spring_obj.cpp  mass_spring_obj.h  mass_spring_test.cpp  matrix_form_cuda_jacobi_solver.cu  object_creator.cpp  para.cpp  para.h  simulator.cpp  vertex.cpp  vertex.h
